fix(examples) Shell solution test now passes OK.

--- a/tests/examples/sh/solution/.solution.toml
+++ b/tests/examples/sh/solution/.solution.toml
@@ -1,7 +1,7 @@
 [MyScript]
 entry_point = "./main.sh"
-parameters = ""
+arguments = ""
 
 [MyOtherCoolScript]
 entry_point = "./extra.sh"
-parameters = ""
+arguments = ""
