chore(examples) C# dotnet example has nunit now.

--- a/tests/examples/cs/build-and-run-dotnet/project.csproj
+++ b/tests/examples/cs/build-and-run-dotnet/project.csproj
@@ -1,5 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+      <PackageReference Include="NUnit" Version="3.13.3" />
+      <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <OutputPath>bin</OutputPath>
