--- a/tests/examples/c/solution/.solution.toml
+++ b/tests/examples/c/solution/.solution.toml
@@ -1,10 +1,11 @@
+# Regular comments
 [HelloWorld]
-entry_point = "./project1/main.c"
-output = "./bin/hello_world1"
+entry_point = "./project1/main.c"    # And also inline comments!
+output      = "./bin/hello_world1"   # Both are...
+executable  = "./bin/hello_world1"   # ...Accepted now.
 
-[HelloWorld2]
-entry_point = "./project2/main.c"
-output = "./bin/hello_world2"
-
-[SOLUTION]
-executable = "./bin/hello_world1"
+# Any entry containing a key with the word "executable" on it
+# will be executed directly in the terminal in parallel.
+[AnyNameWeWant]
+executable_1 = './bin/hello_world2'
+executable_2 = './bin/hello_world2'
