--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,18 @@
 **/obj/
 **/target/
 **/__pycache__/
-**/.dart_tool/
-**/.idea/
-*.pyc
-*.metadata
+**/python/**/*.pyc
+**/dart/**/.metadata
+**/dart/**/.dart_tool/
+**/dart/**/.idea/
+**/flutter/android
+**/flutter/ios
+**/flutter/macos
+**/flutter/linux
+**/flutter/web
+**/flutter/windows
+**/flutter/test
+**/flutter/README.md
+**/flutter/.gitignore
+**/flutter/analysis_options.yaml
+**/flutter/pubspec.lock
