--- a/.gitignore
+++ b/.gitignore
@@ -6,14 +6,14 @@
 **/dart/**/.metadata
 **/dart/**/.dart_tool/
 **/dart/**/.idea/
-**/flutter/android
-**/flutter/ios
-**/flutter/macos
-**/flutter/linux
-**/flutter/web
-**/flutter/windows
-**/flutter/test
-**/flutter/README.md
-**/flutter/.gitignore
-**/flutter/analysis_options.yaml
-**/flutter/pubspec.lock
+**/fluttr/android
+**/fluttr/ios
+**/fluttr/macos
+**/fluttr/linux
+**/fluttr/web
+**/fluttr/windows
+**/fluttr/test
+**/fluttr/README.md
+**/fluttr/.gitignore
+**/fluttr/analysis_options.yaml
+**/fluttr/pubspec.lock
