fix(java/kotlin): We've unified the way java and kotlin compile solutions. This commit includes a big deal of fixes for both languages.

--- a/tests/examples/java/solution/.solution.toml
+++ b/tests/examples/java/solution/.solution.toml
@@ -1,10 +1,12 @@
 [HelloWorld]
 entry_point = "./project1/Main.java"
-output = "./project1/bin/"                  # output directory, since javac don't take an output file.
+output = "./project1/bin/Main.jar"
+arguments = ""
 
 [HelloWorld2]
-entry_point = "./project2/Helper.java"
-output = "./project2/bin/"                  # output directory, since javac don't take an output file.
+entry_point = "./project2/Main.java"
+output = "./project2/bin/Main.jar"
+arguments = ""
 
 [SOLUTION]
-executable = "./project1/bin/Main.class"
+executable = "./project1/bin/Main.jar"
