typo in comments

--- a/tests/examples/typescript/solution/.solution.toml
+++ b/tests/examples/typescript/solution/.solution.toml
@@ -1,6 +1,6 @@
 [proj1]
 entry_point = "./project1/src/index.ts"
-output = "./project1/dist/" # Path where the .ts files are gonna the transpiled to js.
+output = "./project1/dist/" # Path where the .ts files are gonna be transpiled to js.
 
 [proj2]
 entry_point = "./project2/src/index.ts"
