comments: Small stillistic license.

--- a/tests/examples/bau/meson/meson.build
+++ b/tests/examples/bau/meson/meson.build
@@ -4,4 +4,4 @@ project('HelloWorld', 'cpp')
 hello_world = executable('hello_world', 'main.cpp')
 
 # Example of custom target to run all tasks
-build_all_target = custom_target('build_all', command: 'echo', output: 'echo', input: [hello_world])
+build_all = custom_target('build_all', command: 'echo', output: 'echo', input: [hello_world])
