--- a/tests/examples/bau/gradle/build.gradle
+++ b/tests/examples/bau/gradle/build.gradle
@@ -1,4 +1,4 @@
-// NOTE: build.gradle.kts will prevail over build.gradle.
+// NOTE: build.gradle.kts will prevail over 'build.gradle'.
 
 // Example of a task
 task hello_world {
